Update Polish man pages translation

--- a/man/pl/dpkg-statoverride.8.pl.po
+++ b/man/pl/dpkg-statoverride.8.pl.po
@@ -2,27 +2,27 @@
 # This file is distributed under the same license as the dpkg package.
 #
 msgid ""
-msgstr ""
-"Project-Id-Version: dpkg 1.13.16\n"
+msgstr "Project-Id-Version: dpkg 1.13.16\n"
 "POT-Creation-Date: 2006-02-28  1:40+0200\n"
-"PO-Revision-Date: 2006-02-19 15:34+0100\n"
+"PO-Revision-Date: 2006-03-02 00:02+0100\n"
 "Last-Translator: Robert Luberda <robert@debian.org>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
-"MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-2\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 # type: TP
 #: dpkg-statoverride.8:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "dpkg-statoverride"
-msgstr "I</var/lib/dpkg/statoverride>"
+msgstr "dpkg-statoverride"
 
 # type: TH
 #: dpkg-statoverride.8:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2006-02-28"
-msgstr "2006-01-26"
+msgstr "2006-02-28"
 
 # type: TH
 #: dpkg-statoverride.8:1
@@ -55,26 +55,22 @@ msgstr "SK£ADNIA"
 
 # type: Plain text
 #: dpkg-statoverride.8:9
-#, fuzzy
 msgid ""
 "B<dpkg-statoverride> [I<options>] B<--add>I< E<lt>userE<gt> E<lt>groupE<gt> "
 "E<lt>modeE<gt> E<lt>fileE<gt>>"
 msgstr ""
-"B<dpkg-statoverride> [opcje] --add E<lt>u¿ytkownikE<gt> E<lt>grupaE<gt> "
-"E<lt>trybE<gt> I<E<lt>plikE<gt>>"
+"B<dpkg-statoverride> [I<opcje>] B<--add>I< E<lt>u¿ytkownikE<gt> E<lt>grupaE<gt> "
+"E<lt>trybE<gt> E<lt>plikE<gt>>"
 
 # type: Plain text
 #: dpkg-statoverride.8:13
-#, fuzzy
 msgid "B<dpkg-statoverride> [I<options>] B<--remove>I< E<lt>fileE<gt>>"
-msgstr "B<dpkg-statoverride> [opcje] --remove I<E<lt>plikE<gt>>"
+msgstr "B<dpkg-statoverride> [I<opcje>] B<--remove>I< E<lt>plikE<gt>>"
 
 # type: Plain text
 #: dpkg-statoverride.8:18
-#, fuzzy
 msgid "B<dpkg-statoverride> [I<options>] B<--list> [I<E<lt>glob-patternE<gt>>]"
-msgstr ""
-"B<dpkg-statoverride> [opcje] --list I<[E<lt>wzorzec-wyszukiwania-nazwyE<gt>]>"
+msgstr "B<dpkg-statoverride> [I<opcje>] B<--list> [I<E<lt>wzorzec-wyszukiwania-nazwyE<gt>>]"
 
 # type: SH
 #: dpkg-statoverride.8:19
@@ -84,7 +80,6 @@ msgstr "OPIS"
 
 # type: Plain text
 #: dpkg-statoverride.8:26
-#, fuzzy
 msgid ""
 "`B<stat overrides>' are a way to tell dpkg to use a different owner or mode "
 "for a file when a package is installed. (note: I use the word `file' here, "
@@ -103,7 +98,6 @@ msgstr ""
 
 # type: Plain text
 #: dpkg-statoverride.8:30
-#, fuzzy
 msgid ""
 "B<dpkg-statoverride> is a utility to manage the list of stat overrides. It "
 "has three basic functions: adding, removing and listing overrides."
@@ -120,9 +114,9 @@ msgstr "OPCJE"
 
 # type: TP
 #: dpkg-statoverride.8:32
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--add>I< E<lt>userE<gt> E<lt>groupE<gt> E<lt>modeE<gt> E<lt>fileE<gt>>"
-msgstr "I<--add E<lt>u¿ytkownikE<gt> E<lt>grupaE<gt> E<lt>trybE<gt> E<lt>plikE<gt>>"
+msgstr "B<--add>I< E<lt>u¿ytkownikE<gt> E<lt>grupaE<gt> E<lt>trybE<gt> E<lt>plikE<gt>>"
 
 # type: Plain text
 #: dpkg-statoverride.8:39
@@ -150,9 +144,9 @@ msgstr ""
 
 # type: TP
 #: dpkg-statoverride.8:42
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--remove>I< E<lt>fileE<gt>>"
-msgstr "I<--remove E<lt>plikE<gt>>"
+msgstr "B<--remove>I< E<lt>plikE<gt>>"
 
 # type: Plain text
 #: dpkg-statoverride.8:46
@@ -165,9 +159,9 @@ msgstr ""
 
 # type: TP
 #: dpkg-statoverride.8:46
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--list> [I<E<lt>glob-patternE<gt>>]"
-msgstr "I<--list [E<lt>wzorzec-wyszukiwania-nazwyE<gt>]>"
+msgstr "B<--list> [I<E<lt>wzorzec-wyszukiwania-nazwyE<gt>>]"
 
 # type: Plain text
 #: dpkg-statoverride.8:51
@@ -183,9 +177,9 @@ msgstr ""
 
 # type: TP
 #: dpkg-statoverride.8:51
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--force>"
-msgstr "I<--force>"
+msgstr "B<--force>"
 
 # type: Plain text
 #: dpkg-statoverride.8:55
@@ -198,9 +192,9 @@ msgstr ""
 
 # type: TP
 #: dpkg-statoverride.8:55
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--update>"
-msgstr "I<--update>"
+msgstr "B<--update>"
 
 # type: Plain text
 #: dpkg-statoverride.8:59
@@ -211,9 +205,9 @@ msgstr ""
 
 # type: TP
 #: dpkg-statoverride.8:59
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--quiet>"
-msgstr "I<--quiet>"
+msgstr "B<--quiet>"
 
 # type: Plain text
 #: dpkg-statoverride.8:62
@@ -222,9 +216,9 @@ msgstr "Wy¶wietla mniej komunikatów o podejmowanych przez program akcjach."
 
 # type: TP
 #: dpkg-statoverride.8:62
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--help>"
-msgstr "I<--help>"
+msgstr "B<--help>"
 
 # type: Plain text
 #: dpkg-statoverride.8:65
@@ -233,19 +227,18 @@ msgstr "Pokazuje informacje o wersji, prawach autorskich i u¿ytkowaniu."
 
 # type: TP
 #: dpkg-statoverride.8:65
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--admindir>"
-msgstr "I<--admindir>"
+msgstr "B<--admindir>"
 
 # type: Plain text
 #: dpkg-statoverride.8:69
-#, fuzzy
 msgid ""
 "Change the directory of the dpkg database where the statoverride file is "
 "also stored. Defaults to I</var/lib/dpkg>."
 msgstr ""
 "Zmienia katalog bazy danych dpkg, w którym tak¿e jest przechowywany plik "
-"statoverride. Domy¶lnie jest to /var/lib/dpkg."
+"statoverride. Domy¶lnie jest to I</var/lib/dpkg>."
 
 # type: SH
 #: dpkg-statoverride.8:70
@@ -287,9 +280,8 @@ msgstr "ZOBACZ TAK¯E"
 
 # type: Plain text
 #: dpkg-statoverride.8:82
-#, fuzzy
 msgid "B<dpkg>(1)."
-msgstr "B<dpkg>(1)"
+msgstr "B<dpkg>(1)."
 
 # type: SH
 #: dpkg-statoverride.8:83
@@ -315,7 +307,6 @@ msgstr "E<lt>wakkerma@debian.orgE<gt>"
 
 # type: Plain text
 #: dpkg-statoverride.8:90
-#, fuzzy
 msgid ""
 "This is free software; see the GNU General Public Licence version 2 or later "
 "for copying conditions. There is NO warranty."
@@ -324,6 +315,3 @@ msgstr ""
 "Publiczn± GNU w wersji drugiej lub pó¼niejszej, by dowiedzieæ siê o "
 "warunkach dystrybucji. Brak JAKIEJKOLWIEK gwarancji."
 
-# type: TH
-#~ msgid "DPKG-STATOVERRIDE"
-#~ msgstr "DPKG-STATOVERRIDE"
