--- a/man/pl/dpkg.1.pl.po
+++ b/man/pl/dpkg.1.pl.po
@@ -2,28 +2,27 @@
 # This file is distributed under the same license as the dpkg package.
 #
 msgid ""
-msgstr ""
-"Project-Id-Version: dpkg 1.13.16\n"
+msgstr "Project-Id-Version: dpkg 1.13.16\n"
 "POT-Creation-Date: 2006-02-28  1:51+0200\n"
-"PO-Revision-Date: 2006-02-19 19:03+0100\n"
+"PO-Revision-Date: 2006-03-02 00:22+0100\n"
 "Last-Translator: Robert Luberda <robert@debian.org>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
-"MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-2\n"
-"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
+"MIME-Version: 1.0\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 # type: TH
 #: dpkg.1:1
 #, no-wrap
 msgid "dpkg"
-msgstr ""
+msgstr "dpkg"
 
 # type: TH
 #: dpkg.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2006-02-28"
-msgstr "2006-02-11"
+msgstr "2006-02-28"
 
 # type: TH
 #: dpkg.1:1
@@ -82,7 +81,6 @@ msgstr ""
 # type: Plain text
 #
 #: dpkg.1:18
-#, fuzzy
 msgid ""
 "It should I<not> be used by package maintainers wishing to understand how "
 "B<dpkg> will install their packages. The descriptions of what B<dpkg> does "
@@ -101,7 +99,6 @@ msgstr "OPIS"
 # type: Plain text
 #
 #: dpkg.1:26
-#, fuzzy
 msgid ""
 "B<dpkg> is a tool to install, build, remove and manage Debian packages. The "
 "primary and more user-friendly front-end for B<dpkg> is B<dselect>(1). "
@@ -114,7 +111,7 @@ msgstr ""
 "oraz zarz±dzania pakietami systemu Debian. Podstawowym i bardziej przyjaznym "
 "u¿ytkownikowi narzêdziem-nak³adk± B<dpkg> jest B<dselect>(1). Sam B<dpkg> "
 "jest obs³ugiwany z linii komend poprzez podanie jednego dzia³ania oraz "
-"opcjonalnie dodatkowych opcji  Parametr dzia³anie okre¶la, co B<dpkg> ma "
+"opcjonalnie dodatkowych opcji. Parametr dzia³anie okre¶la, co B<dpkg> ma "
 "zrobiæ, a dodatkowe opcje modyfikuj± to dzia³anie."
 
 # type: Plain text
@@ -125,7 +122,7 @@ msgid ""
 "are B<dpkg-deb> actions, and if they are encountered, B<dpkg> just runs "
 "B<dpkg-deb> with the parameters given to it:"
 msgstr ""
-"B<dpkg> mo¿e byæ tak¿e u¿yty jako nak³adka na B<dpkg-deb>.  Wymienione "
+"B<dpkg> mo¿e byæ tak¿e u¿yty jako nak³adka na B<dpkg-deb>. Wymienione "
 "poni¿ej parametry zostan± przekazane z B<dpkg> do B<dpkg-deb>:"
 
 # type: Plain text
@@ -165,7 +162,6 @@ msgstr "INFORMACJE O PAKIETACH"
 # type: Plain text
 #
 #: dpkg.1:48
-#, fuzzy
 msgid ""
 "B<dpkg> maintains some usable information about available packages. The "
 "information is divided in three classes: B<states>, B<selection states> and "
@@ -420,7 +416,7 @@ msgid ""
 "because new files are written at the same time old files are removed."
 msgstr ""
 "B<5.> Je¶li inna wersja tego samego pakietu by³a poprzednio zainstalowana, "
-"uruchomienie skryptu I<postrm> starego pakietu.  Proszê zauwa¿yæ, ¿e ten "
+"uruchomienie skryptu I<postrm> starego pakietu. Proszê zauwa¿yæ, ¿e ten "
 "skrypt jest uruchamiany po skrypcie I<preinst> nowego pakietu, poniewa¿ nowe "
 "pliki s± zapisywane w tym samym czasie, gdy stare s± kasowane."
 
@@ -459,12 +455,11 @@ msgstr "B<dpkg --configure >I<pakiet> ... | B<-a> | B<--pending>"
 # type: Plain text
 #
 #: dpkg.1:134
-#, fuzzy
 msgid ""
 "Reconfigure an unpacked package. If B<-a> or B<--pending> is given instead "
 "of I<package>, all unpacked but unconfigured packages are configured."
 msgstr ""
-"Rekonfigurowanie rozpakowanego pakietu. Je¶li zamiast nazwy I<pakietu> "
+"Ponowne konfigurowanie rozpakowanego pakietu. Je¶li zamiast nazwy I<pakietu> "
 "zosta³a podana opcja B<-a> lub B<--pending>, rekonfiguracja obejmie "
 "wszystkie rozpakowane ale nie skonfigurowane pakiety."
 
@@ -499,7 +494,6 @@ msgstr "B<dpkg -r> | B<--remove> | B<-P> | B< --purge >I<pakiet> ... | B<-a> | B
 # type: Plain text
 #
 #: dpkg.1:155
-#, fuzzy
 msgid ""
 "Remove an installed package. B<-r> or B<--remove> remove everything except "
 "configuration files. This may avoid having to reconfigure the package if it "
@@ -510,11 +504,11 @@ msgid ""
 "purged in file I</var/lib/dpkg/status>, are removed or purged, respectively."
 msgstr ""
 "Usuwanie zainstalowanych pakietów. Parametr B<-r> lub B<--remove> powoduje "
-"usuniêcie wszystkich plików oprócz plików konfiguracyjnych.  Pozwala to "
+"usuniêcie wszystkich plików oprócz plików konfiguracyjnych. Pozwala to "
 "unikn±æ powtórnej konfiguracji, gdyby pakiet by³ znów instalowany pó¼niej. "
 "(Pliki konfiguracyjne s± wymienione w pliku kontrolnym I<debian/conffiles> "
 "pakietu). Parametr B<-P> lub B<--purge> usuwa wszystko, ³±cznie z plikami "
-"konfiguracyjnymi.  Je¶li zamiast nazwy pakietu zosta³a podana opcja B<-a> "
+"konfiguracyjnymi. Je¶li zamiast nazwy pakietu zosta³a podana opcja B<-a> "
 "lub B<--pending>, usuniête lub wyczyszczone zostan± wszystkie pakiety "
 "rozpakowane i wybrane w pliku I</var/lib/dpkg/status> jako przeznaczone do "
 "usuniêcia lub wyczyszczenia."
@@ -547,12 +541,11 @@ msgstr "B<3.> Uruchomienie skryptu I<postrm>"
 #: dpkg.1:167
 #, no-wrap
 msgid "B<dpkg --update-avail> | B<--merge-avail> I<Packages-file>"
-msgstr "B<dpkg --update-avail> | B<--merge-avail> I<Packages>"
+msgstr "B<dpkg --update-avail> | B<--merge-avail> I<plik_pakietów>"
 
 # type: Plain text
 #
 #: dpkg.1:176
-#, fuzzy
 msgid ""
 "Update B<dpkg>'s and B<dselect>'s idea of which packages are available. With "
 "action B<--merge-avail>, old information is combined with information from "
@@ -563,10 +556,11 @@ msgid ""
 msgstr ""
 "Zaktualizowanie bazy danych programu B<dpkg> oraz B<dselect> o dostêpnych "
 "pakietach. Opcja B<--merge-avail> powoduje, ¿e poprzednie informacje s± "
-"³±czone z nowymi z pliku I<Packages>.  Opcja B<--update-avail> powoduje "
-"zast±pienie starych informacji nowymi z pliku I<Packages>. Plik I<Packages> "
-"jest dystrybuowany razem z systemem Debian. B<dpkg> przechowuje informacje z "
-"tego pliku w pliku I</var/lib/dpkg/available>."
+"³±czone z nowymi z I<pliku_pakietów>. Opcja B<--update-avail> powoduje "
+"zast±pienie starych informacji nowymi z I<pliku_pakietów>. I<Plik_pakietów> "
+"dystrybuowany razem z systemem Debian nazywa siê po prostu I<Packages>. "
+"B<dpkg> przechowuje informacje o dostêpnych pakietach w pliku "
+"I</var/lib/dpkg/available>."
 
 # type: Plain text
 #
@@ -587,14 +581,13 @@ msgstr "B<dpkg -A> | B<--record-avail> I<plik_pakietu> ..."
 # type: Plain text
 #
 #: dpkg.1:185
-#, fuzzy
 msgid ""
 "Update B<dpkg> and B<dselect>'s idea of which packages are available with "
 "information from the package I<package_file>. If B<--recursive> or B<-R> "
 "option is specified, I<package_file> must refer to a directory instead."
 msgstr ""
 "Zaktualizowanie bazy danych programu B<dpkg> oraz B<dselect> o dostêpnych "
-"pakietach, uwzglêdniaj±c informacje zawarte w I<pliku_pakietu>.  Je¶li "
+"pakietach, uwzglêdniaj±c informacje zawarte w pakiecie I<plik_pakietu>. Je¶li "
 "zosta³a u¿yta opcja B<--recursive> lub B<-R>, I<plik_pakietu> musi oznaczaæ "
 "wybrany katalog."
 
@@ -633,12 +626,11 @@ msgstr "B<dpkg -C> | B<--audit>"
 # type: Plain text
 #
 #: dpkg.1:196
-#, fuzzy
 msgid ""
 "Searches for packages that have been installed only partially on your "
 "system. B<dpkg> will suggest what to do with them to get them working."
 msgstr ""
-"Wyszukanie pakietów, które zainstalowane s± w systemie tylko czê¶ciowo.  "
+"Wyszukanie pakietów, które zainstalowane s± w systemie tylko czê¶ciowo. "
 "B<dpkg> zasugeruje, co mo¿na zrobiæ z tymi pakietami, aby w pe³ni dzia³a³y."
 
 # type: TP
@@ -661,7 +653,6 @@ msgstr "B<dpkg --set-selections>"
 
 # type: Plain text
 #: dpkg.1:205
-#, fuzzy
 msgid ""
 "Set package selections using file read from stdin. This file should be in "
 "the format 'E<lt>packageE<gt> E<lt>stateE<gt>', where state is one of "
@@ -711,7 +702,6 @@ msgstr "B<dpkg --compare-versions >I<wersja1 op wersja2>"
 # type: Plain text
 #
 #: dpkg.1:224
-#, fuzzy
 msgid ""
 "Compare version numbers, where I<op> is a binary operator. B<dpkg> returns "
 "success (zero result) if the specified condition is satisfied, and failure "
@@ -722,14 +712,14 @@ msgid ""
 "provided only for compatibility with control file syntax: B<E<lt> E<lt>E<lt> "
 "E<lt>= = E<gt>= E<gt>E<gt> E<gt>>."
 msgstr ""
-"Porównanie numerów wersji, gdzie I<op> jest operatorem binarnym.  B<dpkg> "
+"Porównanie numerów wersji, gdzie I<op> jest operatorem binarnym. B<dpkg> "
 "zwróci prawdê (rezultat zerowy), gdy warunek zostanie spe³niony, lub zwróci "
-"fa³sz (rezultat niezerowy) - w przeciwnym razie.  Istniej± dwie grupy "
+"fa³sz (rezultat niezerowy) - w przeciwnym razie. Istniej± dwie grupy "
 "operatorów, w zale¿no¶ci od tego, w jaki sposób traktuje siê pusty numer "
-"I<wersji1> lub I<wersji2>.  Operatory, dla których pusty numer wersji "
+"I<wersji1> lub I<wersji2>. Operatory, dla których pusty numer wersji "
 "oznacza wersjê wcze¶niejsz± ni¿ dowolna: B<lt le eq ne ge gt>. Operatory, "
 "dla których pusty numer wersji oznacza wersjê pó¼niejsz± ni¿ dowolna: B<lt-"
-"nl le-nl ge-nl gt-nl>.  Operatory istniej±ce, aby zachowaæ kompatybilno¶æ z "
+"nl le-nl ge-nl gt-nl>. Operatory istniej±ce, aby zachowaæ kompatybilno¶æ z "
 "plikiem kontrolnym: B<E<lt> E<lt>E<lt> E<lt>= = E<gt>= E<gt>E<gt> E<gt>>."
 
 # type: TP
@@ -741,7 +731,6 @@ msgstr "B<dpkg --command-fd E<lt>nE<gt>>"
 # type: Plain text
 #
 #: dpkg.1:229
-#, fuzzy
 msgid ""
 "Accept a series of commands on input file descriptor B<E<lt>nE<gt>>. Note: "
 "additional options set on the command line, and thru this file descriptor, "
@@ -856,7 +845,7 @@ msgstr ""
 "    Rozpakowanie plików kontrolnych z pakietu.\n"
 "B<dpkg -x> | B<--extract> I<nazwa-pliku katalog>\n"
 "    Rozpakowanie plików zawartych w pakiecie.\n"
-"B<dpkg -f> | B<--field>  I<nazwa-pliku> [I<pola-kontrolne>] ...\n"
+"B<dpkg -f> | B<--field> I<nazwa-pliku> [I<pola-kontrolne>] ...\n"
 "    Podanie informacji z pól kontrolnych pakietu.\n"
 "B<dpkg --fsys-tarfile> I<nazwa-pliku>\n"
 "    Podanie na stdout archiwum tar, które zawiera pakiet Debiana.\n"
@@ -922,7 +911,7 @@ msgid ""
 "without leading dashes) or a comment (if it starts with a B<#>)."
 msgstr ""
 "Wszystkie opcje mog± byæ podane zarówno w linii poleceñ, jak i w pliku "
-"konfiguracyjnym I</etc/dpkg/dpkg.cfg> programu B<dpkg>.  Ka¿da linia tego "
+"konfiguracyjnym I</etc/dpkg/dpkg.cfg> programu B<dpkg>. Ka¿da linia tego "
 "pliku jest albo opcj± (dok³adnie tak± sam± jak opcja linii poleceñ, ale bez "
 "pocz±tkowych my¶lników), albo komentarzem (je¿eli zaczyna siê od B<#>)."
 
@@ -968,14 +957,13 @@ msgstr "B<-D>I<oktal>B< | --debug=>I<oktal>"
 # type: Plain text
 #
 #: dpkg.1:308
-#, fuzzy
 msgid ""
 "Set debugging on. I<octal> is formed by bitwise-orring desired values "
 "together from the list below (note that these values may change in future "
 "releases). B<-Dh> or B<--debug=help> display these debugging values."
 msgstr ""
 "W³±czenie trybu debuggera. I<oktal> jest liczb± ósemkow± zale¿n± od ¿±danych "
-"opcji debuggera (te warto¶ci mog± ulec zmianie w przysz³o¶ci).  Parametr B<-"
+"opcji debuggera (te warto¶ci mog± ulec zmianie w przysz³o¶ci). Parametr B<-"
 "Dh> lub B<--debug=help> wy¶wietla te warto¶ci."
 
 # type: Plain text
@@ -1015,7 +1003,6 @@ msgstr "B<--force->I<dzia³anie> | B<--no-force->I<dzia³anie> | B<--refuse->I<dzi
 # type: Plain text
 #
 #: dpkg.1:327
-#, fuzzy
 msgid ""
 "Force or refuse (B<no-force> and B<refuse> mean the same thing)  to do some "
 "things. I<things> is a comma separated list of things specified below. B<--"
@@ -1023,9 +1010,9 @@ msgid ""
 "forced by default."
 msgstr ""
 "Wymu¶ (B<--force->) wykonanie pewnych dzia³añ lub pozostaw domy¶lny sposób "
-"(B<no-force> i B<refuse> oznaczaj± to samo) wykonania dzia³añ.  I<dzia³anie> "
-"to rozdzielona przecinkami lista dzia³añ.  B<--force-help> wy¶wietla opis "
-"tych dzia³añ.  Dzia³ania oznaczone przez (*) s± domy¶lnie wymuszone."
+"(B<no-force> i B<refuse> oznaczaj± to samo) wykonania dzia³añ. I<dzia³anie> "
+"to rozdzielona przecinkami lista dzia³añ. B<--force-help> wy¶wietla opis "
+"tych dzia³añ. Dzia³ania oznaczone przez (*) s± domy¶lnie wymuszone."
 
 # type: Plain text
 #
@@ -1067,7 +1054,6 @@ msgstr ""
 # type: Plain text
 #
 #: dpkg.1:347
-#, fuzzy
 msgid ""
 "I<Warning: At present dpkg does not do any dependency checking on downgrades "
 "and therefore will not warn you if the downgrade breaks the dependency of "
@@ -1077,10 +1063,10 @@ msgid ""
 msgstr ""
 "I<Ostrze¿enie: W chwili obecnej dpkg nie sprawdza zale¿no¶ci podczas "
 "instalowania starszej wersji pakietu i dlatego nie wypisze ostrze¿enia, "
-"je¿eli zainstalowanie starszej wersji popsuje zale¿no¶ci innych pakietów.  "
+"je¿eli zainstalowanie starszej wersji popsuje zale¿no¶ci innych pakietów. "
 "Instalowania starszych wersji niezbêdnych (essential) pakietów mo¿e "
 "spowodowaæ, i jest to powa¿ny skutek uboczny, ¿e Twój system nie bêdzie siê "
-"nadawa³ do u¿ytku.  Proszê u¿ywaæ tej opcji ostro¿nie.>"
+"nadawa³ do u¿ytku. Proszê u¿ywaæ tej opcji ostro¿nie.>"
 
 # type: Plain text
 #
@@ -1103,14 +1089,13 @@ msgstr ""
 # type: Plain text
 #
 #: dpkg.1:359
-#, fuzzy
 msgid ""
 "B<remove-reinstreq>: Remove a package, even if it's broken and marked to "
 "require reinstallation. This may, for example, cause parts of the package to "
 "remain on the system, which will then be forgotten by B<dpkg>."
 msgstr ""
 "B<remove-reinstreq>: Usuniêcie pakietu, nawet wtedy gdy jest uszkodzony i "
-"wymaga przeinstalowania.  Mo¿e to spowodowaæ pozostawienie czê¶ci pakietu w "
+"wymaga przeinstalowania. Mo¿e to spowodowaæ pozostawienie czê¶ci pakietu w "
 "systemie, gdy¿ B<dpkg> zapomni o niej."
 
 # type: Plain text
@@ -1122,7 +1107,7 @@ msgid ""
 "might cause the whole system to stop working, so use with caution."
 msgstr ""
 "B<remove-essential>: Usuniêcie pakietu, nawet wtedy gdy jest on uznany za "
-"niezbêdny (essential).  Pakiety niezbêdne zawieraj± podstawowe polecenia "
+"niezbêdny (essential). Pakiety niezbêdne zawieraj± podstawowe polecenia "
 "Uniksa. Usuniêcie ich mo¿e spowodowaæ, ¿e system przestanie dzia³aæ. Nale¿y "
 "zachowaæ szczególn± ostro¿no¶æ przy u¿yciu tej opcji."
 
@@ -1199,7 +1184,7 @@ msgid ""
 msgstr ""
 "B<confdef>: Je¶li plik konfiguracyjny zosta³ zmodyfikowany, wybrane zostanie "
 "domy¶lne dzia³anie. Je¿eli nie okre¶lono domy¶lnej akcji, u¿ytkownik "
-"zostanie poproszony o dokonanie wyboru.  Podanie dodatkowo opcji B<--force-"
+"zostanie poproszony o dokonanie wyboru. Podanie dodatkowo opcji B<--force-"
 "confnew> lub B<--force-confold> zdecyduje o dalszym dzia³aniu."
 
 # type: Plain text
@@ -1302,7 +1287,7 @@ msgid ""
 "Don't read or check contents of control file while building a package.  This "
 "is a B<dpkg-deb>(1) option."
 msgstr ""
-"Brak sprawdzania zawarto¶ci pliku kontrolnego podczas budowania pakietu.  Ta "
+"Brak sprawdzania zawarto¶ci pliku kontrolnego podczas budowania pakietu. Ta "
 "opcja jest przes³ana do B<dpkg-deb>(1)."
 
 # type: TP
@@ -1326,7 +1311,6 @@ msgstr ""
 # type: Plain text
 #
 #: dpkg.1:439
-#, fuzzy
 msgid ""
 "Be sure to give B<--no-act> before the action-parameter, or you might end up "
 "with undesirable results. (e.g. B<dpkg --purge foo --no-act> will first "
@@ -1382,7 +1366,6 @@ msgstr "B<--root=>I<katalog> | B<--admindir=>I<katalog> | B<--instdir=>I<katalog
 # type: Plain text
 #
 #: dpkg.1:460
-#, fuzzy
 msgid ""
 "Change default directories. B<admindir> defaults to I</var/lib/dpkg> and "
 "contains many files that give information about status of installed or "
@@ -1394,7 +1377,7 @@ msgid ""
 "var/lib/dpkg>."
 msgstr ""
 "Zmiana domy¶lnych katalogów. B<admindir> to domy¶lnie I</var/lib/dpkg>, "
-"gdzie przechowywane s± informacje o stanie pakietów, itp.  B<instdir> to "
+"gdzie przechowywane s± informacje o stanie pakietów, itp. B<instdir> to "
 "domy¶lnie I</> i oznacza katalog w którym zostan± zainstalowane pliki. "
 "B<instdir> oznacza równie¿ katalog na którym zostanie wykonane polecenie "
 "B<chroot>(2) przed wykonaniem skryptów kontrolnych pakietu. Oznacza to, ¿e "
@@ -1411,17 +1394,16 @@ msgstr "B<-O> | B<--selected-only>"
 # type: Plain text
 #
 #: dpkg.1:466
-#, fuzzy
 msgid ""
 "Only process the packages that are selected for installation. The actual "
 "marking is done with B<dselect> or by B<dpkg>, when it handles packages. For "
 "example, when a package is removed, it will be marked selected for "
 "deinstallation."
 msgstr ""
-"Dzia³anie obejmuje wy³±cznie pakiety wybrane do instalacji.  Wybór mo¿e "
+"Dzia³anie obejmuje wy³±cznie pakiety wybrane do instalacji. Wybór mo¿e "
 "zostaæ dokonany przez polecenie B<dselect> lub B<dpkg>, gdy wykonuje "
 "operacje na pakietach. Na przyk³ad pakiet usuwany jest zaznaczany jako "
-"wybrany do deinstalacji."
+"wybrany do odinstalowania."
 
 # type: TP
 #: dpkg.1:466
@@ -1448,7 +1430,6 @@ msgstr "B<--status-fd >I<E<lt>nE<gt>>"
 # type: Plain text
 #
 #: dpkg.1:477
-#, fuzzy
 msgid ""
 "Send package status info to file descriptor I<E<lt>nE<gt>>. This can be "
 "given multiple times. Status updates are of the form `status: E<lt>pkgE<gt>: "
@@ -1459,9 +1440,9 @@ msgid ""
 msgstr ""
 "Wysy³a do deskryptora pliku I<E<lt>nE<gt>> informacje o stanie pakietów. Ta "
 "opcja mo¿e byæ podana wiele razy. Informacje przesy³ane s± w nastêpuj±cej "
-"postaci: `status: E<lt>pkgE<gt>: E<lt>pkg qstateE<gt>'.  B³êdy s± "
+"postaci: `status: E<lt>pkgE<gt>: E<lt>pkg qstateE<gt>'. B³êdy s± "
 "raportowane jako `status: E<lt>pkgE<gt>: error: rozszerzony-komunikat-"
-"b³êdu'. Konflikty plików konfiguracyjnych  s± raportowane jako `status: "
+"b³êdu'. Konflikty plików konfiguracyjnych s± raportowane jako `status: "
 "conffile-prompt: conffile : 'current-conffile' 'new-conffile' useredited "
 "distedited'"
 
@@ -1544,7 +1525,7 @@ msgid ""
 "B<--admindir> to see how to change locations of these files."
 msgstr ""
 "Pozosta³e pliki wymienione poni¿ej odnosz± siê do swoich domy¶lnych "
-"katalogów.  Opcja B<--admindir> mo¿e zmieniæ lokalizacjê tych plików."
+"katalogów. Opcja B<--admindir> mo¿e zmieniæ lokalizacjê tych plików."
 
 # type: TP
 #: dpkg.1:504
@@ -1579,7 +1560,6 @@ msgstr ""
 # type: Plain text
 #
 #: dpkg.1:516
-#, fuzzy
 msgid ""
 "The following files are components of a binary package. See B<deb>(5)  for "
 "more information about them:"
@@ -1667,7 +1647,6 @@ msgstr "B<COLUMNS>"
 # type: Plain text
 #
 #: dpkg.1:541
-#, fuzzy
 msgid ""
 "Sets the number of columns B<dpkg> should use when displaying formatted "
 "text. Currently only used by -l."
@@ -1768,7 +1747,6 @@ msgstr "B< dpkg -r elvis>"
 # type: Plain text
 #
 #: dpkg.1:576
-#, fuzzy
 msgid ""
 "To install a package, you first need to find it in an archive or CDROM. The "
 "\"available\" file shows that the vim package is in section \"editors\":"
@@ -1811,7 +1789,6 @@ msgstr "B< dpkg --set-selections E<lt>mojepakiety>"
 # type: Plain text
 #
 #: dpkg.1:595
-#, fuzzy
 msgid ""
 "Note that this will not actually install or remove anything, but just set "
 "the selection state on the requested packages. You will need some other "
@@ -1859,13 +1836,12 @@ msgstr "ZOBACZ TAK¯E"
 # type: Plain text
 #
 #: dpkg.1:613
-#, fuzzy
 msgid ""
 "B<dselect>(1), B<dpkg-deb>(1), B<dpkg-query>(1), B<deb>(5), B<deb-control>"
 "(5), B<dpkg.cfg>(5), and B<dpkg-reconfigure>(8)."
 msgstr ""
-"B<dselect>(1), B<dpkg-deb>(1), B<deb>(5), B<deb-control>(5), B<dpkg.cfg>(5), "
-"oraz B<dpkg-reconfigure>(8)"
+"B<dselect>(1), B<dpkg-deb>(1), B<dpkg-query>(1), B<deb>(5), B<deb-control>"
+"(5), B<dpkg.cfg>(5) oraz B<dpkg-reconfigure>(8)."
 
 # type: SH
 #: dpkg.1:614
@@ -1887,14 +1863,11 @@ msgstr "AUTORZY"
 
 # type: Plain text
 #: dpkg.1:621
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "See I</usr/share/doc/dpkg/THANKS.gz> for the list of people who have\n"
 "contributed to B<dpkg> .\n"
 msgstr ""
-"Plik B</usr/share/doc/dpkg/THANKS.gz> zawiera listê osób, które przyczyni³y\n"
+"Plik I</usr/share/doc/dpkg/THANKS.gz> zawiera listê osób, które przyczyni³y\n"
 "siê do rozwoju programu B<dpkg>.\n"
 
-# type: TH
-#~ msgid "DPKG"
-#~ msgstr "DPKG"
