--- a/man/pl/start-stop-daemon.8.pl.po
+++ b/man/pl/start-stop-daemon.8.pl.po
@@ -2,29 +2,28 @@
 # This file is distributed under the same license as the dpkg package.
 #
 msgid ""
-msgstr ""
-"Project-Id-Version: dpkg 1.13.16\n"
+msgstr "Project-Id-Version: dpkg 1.13.16\n"
 "POT-Creation-Date: 2006-02-28  1:40+0200\n"
-"PO-Revision-Date: 2006-02-19 19:10+0100\n"
+"PO-Revision-Date: 2006-03-01 23:37+0100\n"
 "Last-Translator: Robert Luberda <robert@debian.org>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
-"MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-2\n"
-"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
+"MIME-Version: 1.0\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 # type: Plain text
 #
 #: start-stop-daemon.8:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "start-stop-daemon"
-msgstr "B<start-stop-daemon> B<-H>|B<--help>"
+msgstr "start-stop-daemon"
 
 # type: TH
 #: start-stop-daemon.8:1
 #, no-wrap
 msgid "2006-02-28"
-msgstr ""
+msgstr "2006-02-28"
 
 # type: TH
 #: start-stop-daemon.8:1
@@ -96,7 +95,7 @@ msgid ""
 "instances of a running process."
 msgstr ""
 "B<start-stop-daemon> jest wykorzystywany do kontroli procesów uruchamianych "
-"i zatrzymywanych podczas prze³±czania trybów pracy.  Opcje B<--exec>, B<--"
+"i zatrzymywanych podczas prze³±czania trybów pracy. Opcje B<--exec>, B<--"
 "pidfile>, B<--user> i B<--name> mog± okre¶liæ, w jaki sposób B<start-stop-"
 "daemon> ma sprawdziæ, czy dany proces jest ju¿ uruchomiony."
 
@@ -113,17 +112,16 @@ msgid ""
 "program being started."
 msgstr ""
 "Operacja B<--start> wymaga, aby B<start-stop-daemon> sprawdzi³, czy dany "
-"proces jest ju¿ uruchomiony.  Je¶li proces ju¿ istnieje, B<start-stop-"
+"proces jest ju¿ uruchomiony. Je¶li proces ju¿ istnieje, B<start-stop-"
 "daemon> nie wykonuje ¿adnych czynno¶ci i koñczy siê, zwracaj±c kod b³êdu 1 "
-"(lub 0, je¶li podano opcjê B<--oknodo>).  Je¶li dany proces nie jest jeszcze "
+"(lub 0, je¶li podano opcjê B<--oknodo>). Je¶li dany proces nie jest jeszcze "
 "uruchomiony, to wykonywany jest program okre¶lony opcj± B<--exec> (lub, "
-"je¶li podano, opcj± B<--startas>).  Wszelkie argumenty podane tu¿ po opcji "
+"je¶li podano, opcj± B<--startas>). Wszelkie argumenty podane tu¿ po opcji "
 "B<--> s± przekazywane do wykonywanego polecenia."
 
 # type: Plain text
 #
 #: start-stop-daemon.8:68
-#, fuzzy
 msgid ""
 "With B<--stop>, B<start-stop-daemon> also checks for the existence of a "
 "specified process.  If such a process exists, B<start-stop-daemon> sends it "
@@ -135,14 +133,13 @@ msgstr ""
 "Operacja B<--stop> tak¿e powoduje, ¿e B<start-stop-daemon> sprawdza, czy "
 "dany proces jest ju¿ uruchomiony. Je¶li tak jest, to B<start-stop-daemon> "
 "wysy³a sygna³ okre¶lony opcj± B<--signal> i koñczy swoj± pracê z kodem b³êdu "
-"0.  Je¶li proces nie istnieje, B<start-stop-daemon> koñczy siê z kodem b³êdu "
-"1 (lub 0, je¶li podano opcjê B<--oknodo>).  Je¿eli podano opcjê B<--retry>, "
+"0. Je¶li proces nie istnieje, B<start-stop-daemon> koñczy siê z kodem b³êdu "
+"1 (lub 0, je¶li podano opcjê B<--oknodo>). Je¿eli podano opcjê B<--retry>, "
 "to B<start-stop-daemon> sprawdzi, czy proces(y) siê zakoñczy³(y)."
 
 # type: Plain text
 #
 #: start-stop-daemon.8:87
-#, fuzzy
 msgid ""
 "Note that unless B<--pidfile>, is specified, then B<start-stop-daemon> "
 "behaves similarly to B<killall(1).> B<start-stop-daemon> will scan the "
@@ -153,12 +150,12 @@ msgid ""
 "need to live through a B<--stop> you must specify a pidfile."
 msgstr ""
 "Proszê zauwa¿yæ, ¿e je¿eli nie podano opcji B<--pidfile>, to B<start-stop-"
-"daemon> zachowuje siê podobnie do B<killall>(1).  B<start-stop-daemon> "
+"daemon> zachowuje siê podobnie do B<killall>(1). B<start-stop-daemon> "
 "przejrzy tabelê procesów, szukaj±c jakiegokolwiek procesu o zgodniej nazwie, "
-"identyfikatorze u¿ytkownika i/lub grupy (je¿eli je podano).  Znalezienie "
+"identyfikatorze u¿ytkownika i/lub grupy (je¿eli je podano). Znalezienie "
 "jakiegokolwiek pasuj±cego procesu spowoduje, ¿e B<--start> nie uruchomi "
-"procesu.  W wypadku opcji B<--stop> do wszystkich pasuj±cych procesów "
-"zostanie wys³any sygna³ KILL.  Procesom, maj±cym d³ugo uruchomione dzieci, "
+"procesu. W wypadku opcji B<--stop> do wszystkich pasuj±cych procesów "
+"zostanie wys³any sygna³ KILL. Procesom, maj±cym d³ugo uruchomione dzieci, "
 "które musz± prze¿yæ operacjê B<--stop>, nale¿y okre¶liæ plik pidfile."
 
 # type: SH
@@ -263,7 +260,6 @@ msgstr "B<-R>|B<--retry> I<timeout>|I<plan-dzia³ania>"
 # type: Plain text
 #
 #: start-stop-daemon.8:129
-#, fuzzy
 msgid ""
 "With B<--stop>, specifies that B<start-stop-daemon> is to check whether the "
 "process(es)  do finish. It will check repeatedly whether any matching "
@@ -272,7 +268,7 @@ msgid ""
 msgstr ""
 "W czasie operacji B<--stop> powoduje sprawdzenie przez B<start-stop-daemon>, "
 "czy proces(y) siê zakoñczy³(y). Sprawdzanie jest powtarzane, je¿eli dzia³a "
-"jakikolwiek pasuj±cy proces, dopóki wszystkie siê nie skoñcz±.  Je¿eli "
+"jakikolwiek pasuj±cy proces, dopóki wszystkie siê nie skoñcz±. Je¿eli "
 "procesy siê nie zakoñcz±, podejmowane s± akcje okre¶lone przez parametr "
 "I<plan-dzia³ania>."
 
@@ -314,7 +310,7 @@ msgid ""
 "then any signal specified with B<--signal> is ignored."
 msgstr ""
 "Je¿eli osi±gniêto koniec planu dzia³ania, a opcja B<forever> nie zosta³a "
-"u¿yta, to B<start-stop-daemon> koñczy dzia³anie z kodem b³êdu 2.  Je¿eli "
+"u¿yta, to B<start-stop-daemon> koñczy dzia³anie z kodem b³êdu 2. Je¿eli "
 "zosta³ okre¶lony plan dzia³ania, to sygna³ podany w B<--signal> jest "
 "ignorowany."
 
@@ -331,7 +327,7 @@ msgid ""
 "With B<--start>, start the process specified by I<pathname>.  If not "
 "specified, defaults to the argument given to B<--exec>."
 msgstr ""
-"Przy operacji B<--start>, Uruchamiany jest program o okre¶lonej I<¶cie¿ce>.  "
+"Przy operacji B<--start>, Uruchamiany jest program o okre¶lonej I<¶cie¿ce>. "
 "Je¶li brak tej opcji, domy¶lnie uruchamiany jest program podany w opcji B<--"
 "exec>."
 
@@ -386,7 +382,6 @@ msgstr "B<-c>|B<--chuid> I<u¿ytkownik>|I<uid>"
 # type: Plain text
 #
 #: start-stop-daemon.8:201
-#, fuzzy
 msgid ""
 "Change to this username/uid before starting the process. You can also "
 "specify a group by appending a B<:>, then the group or gid in the same way "
@@ -398,9 +393,9 @@ msgid ""
 msgstr ""
 "Zmiana u¿ytkownika/uid przed uruchomieniem procesu. Mo¿na tak¿e zmieniæ "
 "grupê poprzez do³±czenie B<:> wraz z nazw± grupy b±d¼ numerem gid, podobnie "
-"jak w poleceniu `chown' (I<u¿ytkownik>B<:>I<grupa>).  Podczas korzystania z "
+"jak w poleceniu `chown' (I<u¿ytkownik>B<:>I<grupa>). Podczas korzystania z "
 "tej opcji nale¿y pamiêtaæ, ¿e grupa g³ówna i poboczne zostan± ustawione, "
-"nawet gdy nie podano opcji B<--group>.  Opcja B<--group> jest przydatna "
+"nawet gdy nie podano opcji B<--group>. Opcja B<--group> jest przydatna "
 "tylko dla grup, których podany u¿ytkownik nie jest cz³onkiem (na przyk³ad "
 "przy dodawaniu procesowi cz³onkostwa grupy dla takich u¿ytkowników jak "
 "B<nobody>)."
@@ -419,7 +414,7 @@ msgid ""
 "the pidfile is also written after the chroot."
 msgstr ""
 "Zmienia katalog bie¿±cy na I<root> i czyni go g³ównym katalogiem (rootem) "
-"przed wystartowaniem procesu.  Proszê zauwa¿yæ, ¿e plik pidfile jest "
+"przed wystartowaniem procesu. Proszê zauwa¿yæ, ¿e plik pidfile jest "
 "tworzony po wykonaniu chroot."
 
 # type: TP
@@ -431,13 +426,12 @@ msgstr "B<-d>|B<--chdir> I<¶cie¿ka>"
 # type: Plain text
 #
 #: start-stop-daemon.8:215
-#, fuzzy
 msgid ""
 "Chdir to I<path> before starting the process. This is done after the chroot "
 "if the B<-r>|B<--chroot> option is set. When not specified, start-stop-"
 "daemon will chdir to the root directory before starting the process."
 msgstr ""
-"Przed uruchomieniem procesu zmienia katalog bie¿±cy na I<¶cie¿kê>.  Robione "
+"Przed uruchomieniem procesu zmienia katalog bie¿±cy na I<¶cie¿kê>. Robione "
 "jest to przed zmienieniem g³ównego katalogu (roota), je¿eli podano równie¿ "
 "opcjê B<-r>|B<--chroot>. Je¶li nie podano tej opcji, to przed uruchomieniem "
 "procesu B<start-stop-daemon> ustawi jego katalog bie¿±cy na g³ówny katalog "
@@ -464,15 +458,15 @@ msgstr ""
 "Zwykle u¿ywa siê tej opcji dla programów, które nie od³±czaj± siê od "
 "terminala (detach) samoistnie. Ta opcja spowoduje, ¿e B<start-stop-daemon> "
 "utworzy proces potomny przed uruchomieniem programu i bêdzie kontynuowaæ go "
-"w tle.  B<UWAGA: start-stop-daemon> nie mo¿e sprawdziæ kodu b³êdu je¿eli "
+"w tle. B<UWAGA: start-stop-daemon> nie mo¿e sprawdziæ kodu b³êdu je¿eli "
 "proces siê nie wykona z B<jakiegokolwiek> powodu. Ta opcja powinna byæ "
 "u¿ywana w ostateczno¶ci, gdy dany program sam nie tworzy procesu potomnego."
 
 # type: TP
 #: start-stop-daemon.8:227
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-N>|B<--nicelevel> I<int>"
-msgstr "B<-N>|B<--nicelevel> I<liczba>  "
+msgstr "B<-N>|B<--nicelevel> I<liczba>"
 
 # type: Plain text
 #
@@ -502,7 +496,7 @@ msgstr ""
 "tej opcji spowoduje, ¿e B<start-stop-daemon> utworzy plik, który zosta³ "
 "podany w opcji B<--pidfile> i umie¶ci w nim numer pid tu¿ przed "
 "uruchomieniem procesu. Nale¿y zauwa¿yæ, ¿e ta opcja nie skasuje tego pliku "
-"po zatrzymaniu programu.  B<UWAGA:> Ta opcja mo¿e nie zadzia³aæ w ka¿dym "
+"po zatrzymaniu programu. B<UWAGA:> Ta opcja mo¿e nie zadzia³aæ w ka¿dym "
 "przypadku. Zadzia³a przede wszystkim, gdy program zostanie uruchomiony z "
 "procesu potomnego, dlatego te¿ ta opcja jest u¿yteczna jedynie wraz z opcj± "
 "B<--background>."
@@ -570,10 +564,3 @@ msgstr ""
 "Podrêcznik napisa³ Klee Dienes E<lt>klee@mit.eduE<gt>, a poprawi³ Ian "
 "Jackson."
 
-# type: TH
-#~ msgid "START-STOP-DAEMON"
-#~ msgstr "START-STOP-DAEMON"
-
-# type: TH
-#~ msgid "15th March 1997"
-#~ msgstr "15 marca 1997"
