--- a/man/pl/update-alternatives.8.pl.po
+++ b/man/pl/update-alternatives.8.pl.po
@@ -2,14 +2,14 @@
 # This file is distributed under the same license as the dpkg package.
 #
 msgid ""
-msgstr ""
-"Project-Id-Version: dpkg 1.13.16\n"
+msgstr "Project-Id-Version: dpkg 1.13.16\n"
 "POT-Creation-Date: 2006-02-28  1:40+0200\n"
-"PO-Revision-Date: 2006-02-19 15:34+0100\n"
+"PO-Revision-Date: 2006-03-01 23:34+0100\n"
 "Last-Translator: Robert Luberda <robert@debian.org>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
-"MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-2\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 # type: Plain text
@@ -21,9 +21,9 @@ msgstr ""
 #.  (at your option) any later version.  There is NO WARRANTY.  You can
 #.  find the GNU GPL in /usr/share/common-licenses/GPL on any Debian system.
 #: update-alternatives.8:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "update-alternatives"
-msgstr "update-alternatives --auto vi"
+msgstr "update-alternatives"
 
 # type: TH
 #.  update\-alternatives.8
@@ -36,7 +36,7 @@ msgstr "update-alternatives --auto vi"
 #: update-alternatives.8:8
 #, no-wrap
 msgid "2006-02-28"
-msgstr ""
+msgstr "2006-02-28"
 
 # type: TH
 #.  update\-alternatives.8
@@ -145,7 +145,7 @@ msgid ""
 "B<update-alternatives> creates, removes, maintains and displays information "
 "about the symbolic links comprising the Debian alternatives system."
 msgstr ""
-"B<update-alternatives> tworzy, usuwa,  wy¶wietla oraz zarz±dza informacjami "
+"B<update-alternatives> tworzy, usuwa, wy¶wietla oraz zarz±dza informacjami "
 "o linkach symbolicznych sk³adaj±cych siê na system alternatyw Debiana."
 
 # type: Plain text
@@ -168,7 +168,6 @@ msgstr ""
 
 # type: Plain text
 #: update-alternatives.8:94
-#, fuzzy
 msgid ""
 "Debian's alternatives system aims to solve this problem.  A generic name in "
 "the filesystem is shared by all files providing interchangeable "
@@ -203,7 +202,7 @@ msgid ""
 msgstr ""
 "Nazwa ogólna nie jest bezpo¶rednim linkiem symbolicznym do wybranej "
 "alternatywy, ale jest linkiem do pliku w I<katalogu> I<alternatyw>, który to "
-"z kolei jest linkiem do w³a¶ciwego  pliku. Jest tak zrobione dlatego, ¿eby "
+"z kolei jest linkiem do w³a¶ciwego pliku. Jest tak zrobione dlatego, ¿eby "
 "zmiany administratora systemu by³y po³±czone ze zmianami w katalogu I</etc>: "
 "standard FHS wymienia powody, aby tak zrobiæ."
 
@@ -269,7 +268,7 @@ msgid ""
 msgstr ""
 "Grupa linków jest trybie automatycznym, kiedy jest po raz pierwszy "
 "wprowadzana do systemu. Je¿eli administrator systemu wprowadzi zmiany do "
-"automatycznych ustawieñ, bêd± one wziête pod uwagê podczas nastêpnego  "
+"automatycznych ustawieñ, bêd± one wziête pod uwagê podczas nastêpnego "
 "uruchomienia B<update-alternatives> na takiej zmienionej grupie linków, a "
 "grupa ta automatycznie przejdzie w tryb rêczny."
 
@@ -286,7 +285,6 @@ msgstr ""
 
 # type: Plain text
 #: update-alternatives.8:176
-#, fuzzy
 msgid ""
 "When using the I<--config> option, B<update-alternatives> will list all of "
 "the choices for the link group of which given I<name> is the master link. "
@@ -396,7 +394,7 @@ msgid ""
 "A directory, by default I</var/lib/dpkg/alternatives>, containing B<update-"
 "alternatives>' state information."
 msgstr ""
-"Katalog zawieraj±cy informacje o stanie B<update-alternatives>, domy¶lnie  "
+"Katalog zawieraj±cy informacje o stanie B<update-alternatives>, domy¶lnie "
 "I</var/lib/dpkg/alternatives>."
 
 # type: TP
@@ -484,7 +482,7 @@ msgid ""
 "the link group B<vi>, which includes links for the program itself and the "
 "associated manpage."
 msgstr ""
-"Mamy klika pakietów, które dostarczaj± edytora tekstu kompatybilnego z   "
+"Mamy klika pakietów, które dostarczaj± edytora tekstu kompatybilnego z "
 "edytorem B<vi>, na przyk³ad B<nvi> i B<vim>. To, który pakiet bêdzie "
 "u¿ywany, kontrolowane jest przez grupê linków B<vi>, zawieraj±c± linki do "
 "samego programu i jego stron podrêcznika."
@@ -697,7 +695,7 @@ msgstr ""
 "informacja bêdzie dodana jako nowy zbiór alternatyw dla tej grupy. W "
 "przeciwnym wypadku zostanie utworzona nowa grupa, ustawiona w tryb "
 "automatyczny. Je¿eli grupa jest w trybie automatycznym, a priorytet nowo "
-"dodawanej alternatywy  jest wiêkszy od priorytetu ka¿dej z innych "
+"dodawanej alternatywy jest wiêkszy od priorytetu ka¿dej z innych "
 "zainstalowanych alternatyw w tej grupie, to linki symboliczne bêd± "
 "zaktualizowane tak, ¿eby prowadzi³y do nowo dodanej alternatywy."
 
@@ -725,7 +723,6 @@ msgstr "B<--remove> I<nazwa ¶cie¿ka>"
 
 # type: Plain text
 #: update-alternatives.8:370
-#, fuzzy
 msgid ""
 "Remove an alternative and all of its associated slave links.  I<name> is a "
 "name in the alternatives directory, and I<path> is an absolute filename to "
@@ -829,7 +826,6 @@ msgstr "B<--config> I<link>"
 
 # type: Plain text
 #: update-alternatives.8:406
-#, fuzzy
 msgid ""
 "Show available alternatives for a link group and allow the user to "
 "interactively select which one to use. The link group is updated and taken "
@@ -958,7 +954,6 @@ msgstr "AUTOR"
 
 # type: Plain text
 #: update-alternatives.8:451
-#, fuzzy
 msgid ""
 "Debian update-alternatives is copyright 1995 Ian Jackson. It is free "
 "software; see the GNU General Public Licence version 2 or later for copying "
@@ -970,7 +965,6 @@ msgstr ""
 
 # type: Plain text
 #: update-alternatives.8:455
-#, fuzzy
 msgid ""
 "This manual page is copyright 1997/98 Charles Briscoe-Smith.  This is free "
 "documentation; see the GNU General Public Licence version 2 or later for "
@@ -987,7 +981,7 @@ msgid ""
 "You can find the GNU GPL in /usr/share/common-licenses/GPL on any Debian "
 "system."
 msgstr ""
-"W ka¿dym systemie Debiana  GNU GPL mo¿na znale¼æ w pliku /usr/share/common-"
+"W ka¿dym systemie Debiana GNU GPL mo¿na znale¼æ w pliku /usr/share/common-"
 "licenses/GPL."
 
 # type: SH
@@ -1001,10 +995,3 @@ msgstr "ZOBACZ TAK¯E"
 msgid "B<ln>(1), FHS, the Filesystem Hierarchy Standard."
 msgstr "B<ln>(1), FHS - standard hierarchii systemu plików."
 
-# type: TH
-#~ msgid "UPDATE-ALTERNATIVES"
-#~ msgstr "UPDATE-ALTERNATIVES"
-
-# type: TH
-#~ msgid "19 January 1998"
-#~ msgstr "19 stycznia 1998"
