--- a/man/pl/dselect.cfg.5.pl.po
+++ b/man/pl/dselect.cfg.5.pl.po
@@ -2,27 +2,27 @@
 # This file is distributed under the same license as the dpkg package.
 #
 msgid ""
-msgstr ""
-"Project-Id-Version: dpkg 1.13.16\n"
+msgstr "Project-Id-Version: dpkg 1.13.16\n"
 "POT-Creation-Date: 2006-02-28  1:40+0200\n"
-"PO-Revision-Date: 2006-02-19 15:34+0100\n"
+"PO-Revision-Date: 2006-03-01 23:38+0100\n"
 "Last-Translator: Robert Luberda <robert@debian.org>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
-"MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-2\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 # type: TH
 #: dselect.cfg.5:1
 #, no-wrap
 msgid "dselect.cfg"
-msgstr ""
+msgstr "dselect.cfg"
 
 # type: TH
 #: dselect.cfg.5:1
 #, no-wrap
 msgid "2006-02-28"
-msgstr ""
+msgstr "2006-02-28"
 
 # type: TH
 #: dselect.cfg.5:1
@@ -74,15 +74,13 @@ msgstr "PLIKI"
 
 # type: TP
 #: dselect.cfg.5:14
-#, fuzzy
 msgid "I</etc/dpkg/dselect.cfg>"
-msgstr "I</etc/dpkg/dselect.cfg> ~/.dselect.cfg"
+msgstr "I</etc/dpkg/dselect.cfg>"
 
 # type: Plain text
 #: dselect.cfg.5:16
-#, fuzzy
 msgid "I<~/.dselect.cfg>"
-msgstr "B<dselect>(1)"
+msgstr "I<~/.dselect.cfg>"
 
 # type: SH
 #: dselect.cfg.5:17
@@ -92,12 +90,11 @@ msgstr "AUTOR"
 
 # type: Plain text
 #: dselect.cfg.5:20
-#, fuzzy
 msgid ""
 "See I</usr/share/doc/dpkg/THANKS> for the list of people who have "
 "contributed to B<dselect>."
 msgstr ""
-"Patrz plik B</usr/share/doc/dpkg/THANKS.gz> zawieraj±cy listê osób, które "
+"Patrz plik I</usr/share/doc/dpkg/THANKS.gz> zawieraj±cy listê osób, które "
 "przyczyni³y siê do rozwoju programu B<dselect>."
 
 # type: SH
@@ -108,14 +105,6 @@ msgstr "ZOBACZ TAK¯E"
 
 # type: Plain text
 #: dselect.cfg.5:22
-#, fuzzy
 msgid "B<dselect>(1)."
-msgstr "B<dselect>(1)"
+msgstr "B<dselect>(1)."
 
-# type: TH
-#~ msgid "DSELECT.CFG"
-#~ msgstr "DSELECT.CFG"
-
-# type: TH
-#~ msgid "February 2002"
-#~ msgstr "luty 2002"
